Ajustando filtros e botão adicionar sala